--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The IGNITE Workshop
-email: ignite2018ischool@gmail.com
+title: Civic Tech and Design Timeline
+email: deeper.myeong.lee@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Funding for this workshop was provided by 
-  the NSF CISE Division of Computer and Network Systems under award number 1551584.
+  This is a draft of civic tech/design timeline.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://2018ignite.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://civic-tech-timeline.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  
 
