--- a/_data/chronicles.yml
+++ b/_data/chronicles.yml
@@ -1,15 +1,11 @@
 
 - year: 1996
   description: Baltimore introduces 311
-  link: 
-  comment:
+  comment: test
 
 - year: 1998
   description: Gov Works Launches
-  link: 
-  comment:
 
 - year: 2000
   description: Gov Works Shuts down
   link: https://en.wikipedia.org/wiki/GovWorks
-  comment:
