Add launch of Open Government Partnership

--- a/_data/chronicles.yml
+++ b/_data/chronicles.yml
@@ -91,6 +91,10 @@
   description: The New York City Transparency Working group is formed to pass NYC's open data law.
   link: https://nyctwg.org/
 
+- year: 2011
+  description: Open Government Partnership is launched.
+  link: https://en.m.wikipedia.org/wiki/Open_Government_Partnership
+
 - year: 2011 April
   description: GDS launches in the UK (in response to an HC.gov level mess).
 
