Fix typo in _chronicles.yml
"Chsnell" -> "Chisnell"

--- a/_data/chronicles.yml
+++ b/_data/chronicles.yml
@@ -12,7 +12,7 @@
   link: https://en.wikipedia.org/wiki/GovWorks
 
 - year: 2000
-  description: Butterfly ballot disaster -> Dana Chsnell suits up
+  description: Butterfly ballot disaster -> Dana Chisnell suits up
 
 - year: 2003
   description: NYC implements 311 as the "Yahoo for city services."
